# maxia

./: .claudeignore  .dockerignore  .gitignore  .graphifyignore  .mcp.json  .upptimerc.yml  AUDIT_COMPLET_V12.md  CLAUDE.md  Dockerfile  PLAN_ACTION_V12.md  README.md  REMOVED.md  api-mega-list-pr.md  commande redeployer les services.txt  demo_agent.py  deploy.sh  dify_template.yml  docker-compose.yml  glama.json  json  start_ceo.bat
.claude/: settings.local.json
.claude-plugin/: plugin.json
audit_reports/: bandit.json  benchmark_results.md
autogen-maxia/: README.md  pyproject.toml
autogen-maxia/src/autogen_maxia/: __init__.py  client.py  tools.py
autogen-maxia/src/autogen_maxia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/: .env.example  a2a_protocol.py  activity_feed.py  admin_routes.py  agent_analytics.py  agent_builder.py  agent_credit.py  agent_credit_score.py  agent_leaderboard.py  agent_outreach.py  agent_permissions.py  agent_profile.py  agent_subcontract.py  agent_worker.py  agentid_client.py  agentverse_bridge.py  akash_client.py  alert_service.py  alerts.py  analytics.py  ap2_manager.py  api_keys.py  app_store.py  aptos_verifier.py  arbitrum_verifier.py  auction_manager.py  audit_trail.py  auth.py  avalanche_verifier.py  awp_protocol.py  base_escrow_client.py  base_verifier.py  blog.py  bnb_verifier.py  brain.py  bridge_service.py  business_listing.py  ceo_api.py  ceo_bridge.py  ceo_core.py  (+140 more)
blog/: 2026-03-21-how-ai-devs-can-cut-solana-costs-by-50%-.md  2026-03-21-how-ai-devs-on-solana-can-launch-their-f.md  2026-03-21-how-ai-devs-on-solana-can-monetize-with-.md  2026-03-21-how-to-monetize-your-ai-agent-with-maxia.md  2026-03-22-how-to-monetize-your-ai-agent-with-maxia.md  2026-03-23-how-to-monetize-your-ai-agent-with-maxia.md  2026-03-29-maxia-update.md  2026-03-30-maxia-update.md
claude_chrome/: 00_README.md  02_show_hn.md  03_dm_fetchai.md  04_dm_virtuals.md  05_dm_elizaos.md  06_dm_olas.md  07_dm_langchain.md  08_dm_crewai.md  09_dm_autogen.md  10_dm_composio.md  11_dm_suprawall.md
commands/: maxia-awp.md  maxia-discover.md  maxia-finetune.md  maxia-gpu.md  maxia-stocks.md  maxia-swap.md  maxia-yields.md
composio-maxia/: README.md  pyproject.toml
composio-maxia/src/composio_maxia/: __init__.py  actions.py
composio-maxia/src/composio_maxia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
contracts/: Anchor.toml  Cargo.toml  UPGRADE_PLAN.md
contracts/programs/maxia_escrow/: Cargo.toml
contracts/programs/maxia_escrow/src/: lib.rs
crewai-tools-maxia/: .gitignore  README.md  pyproject.toml
crewai-tools-maxia/src/crewai_tools_maxia/: __init__.py  client.py  tools.py
deerflow-maxia/: README.md  extensions_config.example.json  pyproject.toml
deerflow-maxia/src/deerflow_maxia/: __init__.py  client.py  skills.py
deerflow-maxia/src/deerflow_maxia.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
demos/: README.md  langchain_maxia_aip.py  llama_index_maxia_mesh.py  uagents_maxia_a2a.py
docs/: MAXIA_GUARD.md  PHASE1_DEPLOY.md  SEO_SUBMISSIONS.md  TUTO_DISCORD_OUTREACH.md  agent-builder-spec.md  google_vids_prompts.md  plan_affaires_maxia.md
eliza-plugin-maxia/: package.json  tsconfig.json
examples/: github-action-agent.yml
frontend/: 404.html  MAXIA_DOCS.md  about.html  account.html  agent-dashboard.html  agents.html  app.html  architecture.html  blocked.html  blog.html  buy.html  changelog.html  compare.html  creator.html  docs.html  enterprise.html  exec-summary.html  faq.html  feed.html  feedback.html  forum.html  gen_banners.py  governance.html  guard.html  index.html  landing.html  launch.html  legal.html  llms-full.txt  llms.txt  manifest.json  marketplace.html  metrics.html  miniapp.html  offline.html  pitch.html  playground.html  pricing.html  privacy.html  profile.html  (+15 more)
frontend-backup-1727/: app.html  creator.html  enterprise.html  index.html  manifest.json  sitemap.xml  sw.js
frontend-new/: app.html  architecture.html  compare.html  creator.html  docs.html  enterprise.html  forum.html  index.html  marketplace.html  register.html  status.html  store.html  style.css  trust.html  whitelabel.html
google-adk-maxia/: README.md  pyproject.toml
google-adk-maxia/src/google_adk_maxia/: __init__.py  client.py  tools.py
google-adk-maxia/src/google_adk_maxia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
huggingface-space/: README.md  app.py  requirements.txt
langchain-maxia/: README.md  pyproject.toml
langchain-maxia/src/langchain_maxia/: __init__.py  agent.py  client.py  tools.py
llama-index-maxia/: LICENSE  README.md  pyproject.toml
llama-index-maxia/src/llama_index_maxia/: __init__.py  client.py  identity.py  wrapper.py
llama-index-tools-maxia/: .gitignore  README.md  pyproject.toml
llama-index-tools-maxia/src/llama_index_tools_maxia/: __init__.py  base.py  client.py
local_ceo/: .browser_dedup.json  .last_update_check  PLAN_CEO.md  __init__.py  actions_today.json  agents.py  api_social.py  api_surf.py  audit_local.py  audit_report.md  blog_manager.py  blog_writer.py  bounty_poster_state.json  browser_agent.py  ceo_console.bat  ceo_console.py  ceo_local.py  ceo_local_v2.py  ceo_local_v2_OLD.py  ceo_main.py  ceo_memory.json.bak  ceo_missions.bat  chat_ceo.bat  config_local.py  conversion_tracker.py  conversions.json  dashboard.py  discord_approval.py  discord_fix_prompt.md  email_manager.py  email_reputation.py  finetune_prep.py  lead_tier.py  learnings.json  live_prices.py  llm.py  maxia_knowledge.md  memory.py  moltbook_tuto.md  notifier.py  (+25 more)
maxia-sdk/: README.md  pyproject.toml
maxia-sdk/src/maxia/: __init__.py  client.py
maxia-ts-sdk/: README.md  package-lock.json  package.json
openclaw-plugin-maxia/: README.md  openclaw.plugin.json  package.json  tsconfig.json
plugin-maxia-elizaos/: README.md  package-lock.json  package.json
registries/: composio-integration.json  langchain-hub.yaml  mcp-official-server.json  mcp-registry.json
scripts/: resolve_discord_invites.py  send_test_email.py  test_discord_bot.py  test_maxia_community.py  (+1 more)
(+413 files in other folders)
