[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deerflow-maxia"
version = "0.1.0"
description = "MAXIA skills for DeerFlow v2 — AI-to-AI marketplace tools (swap, GPU, DeFi, escrow, stocks) on 15 blockchains"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "MAXIA", email = "ceo@maxiaworld.app"}]
keywords = ["deerflow", "maxia", "ai-agents", "crypto", "mcp", "blockchain", "defi", "marketplace"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://maxiaworld.app"
Documentation = "https://maxiaworld.app/docs"
Repository = "https://github.com/MAXIAWORLD/deerflow-maxia"
"MCP Server" = "https://maxiaworld.app/mcp/manifest"
"API Docs" = "https://maxiaworld.app/docs"

[tool.setuptools.packages.find]
where = ["src"]
