[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-maxia"
version = "0.2.0"
description = "LangChain integration for MAXIA — AI-to-AI Marketplace on 14 blockchains"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "MAXIA", email = "contact@maxiaworld.app" },
]
keywords = [
    "langchain",
    "maxia",
    "ai-marketplace",
    "solana",
    "crypto",
    "defi",
    "gpu-rental",
    "tokenized-stocks",
    "agent",
    "a2a",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "langchain-core>=0.3",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://maxiaworld.app"
Repository = "https://github.com/majorelalexis-stack/maxia"
Documentation = "https://maxiaworld.app/docs"
"API Reference" = "https://maxiaworld.app/api/public/docs"
"MCP Server" = "https://maxiaworld.app/mcp/manifest"
Issues = "https://github.com/majorelalexis-stack/maxia/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_maxia"]
