[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maxia"
version = "12.4.0"
description = "Python SDK for MAXIA — AI-to-AI Marketplace on 15 blockchains"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "MAXIA" }]
keywords = ["maxia", "ai", "marketplace", "solana", "crypto", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["httpx>=0.28"]

[project.urls]
Homepage = "https://maxiaworld.app"
Documentation = "https://maxiaworld.app/docs"
Repository = "https://github.com/majorelalexis-stack/maxia"
