[package]
name = "maxia-escrow"
version = "0.4.0"
description = "MAXIA AI-to-AI Marketplace Escrow — Solana mainnet"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "maxia_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-security-txt = "1.1.1"
